client/src/index.css
body {
  font: 15px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  padding: 0;
  margin: 0;
  background-color: black;
  /* Location of the image */
  background-image: url("./Images/beer-199650_1920.jpg");

  /* Background image is centered vertically and horizontally at all times */
  background-position: center center;

  /* Background image doesn't tile */
  background-repeat: no-repeat;

  /* Background image is fixed in the viewport so that it doesn't move when 
     the content's height is greater than the image's height */
  background-attachment: fixed;

  /* This is what makes the background image rescale based
     on the container's size */
  background-size: cover;

  /* Set a background color that will be displayed
     while the background image is loading */
  background-color: black;
  /* margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; */
}

/* Global css */
.container {
  width: 80%;
  margin: auto;
  overflow: hidden;
  color: #dcab2d;
}

.button {
  background: #dcab2d;
  border: 0;
  height: 25px;
}

header {
  background-color: #171716;
  min-height: 10px;
  /* border-bottom: #dcab2d 1px solid; */
}

header a {
  color: #dcab2d;
  text-decoration: none;
}

header ul {
  margin: 0px;
  padding: 0px;
}

header li {
  display: inline;
  padding: 0 10px 0 10px;
}

header nav {
  float: right;
  margin-top: 13px;
}

header #logo {
  margin-top: 4px;
  margin-left: 4px;
}

header #logo-box {
  /* white-space: nowrap; */
}

header #alpha-tag {
  display: inline;
  color: #dcab2d;
}

header li a,
.dropbtn {
  display: inline-block;
  color: #dcab2d;
  text-align: center;
  padding: 0px 5px;
  text-decoration: none;
}

header li a:hover,
.dropdown:hover .dropbtn {
  color: #b38b24;
}

/* Not in use, maybe add this functionality later (active link color/font) */
header .current a {
  color: #b38b24;
  font-weight: bold;
}

/* Dropdown in header */
header li.dropdown {
  display: inline-block;
}

.dropdown-content {
  right: 0;
  display: none;
  position: absolute;
  background-color: #171716;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

header .dropdown-content a {
  color: #dcab2d;
  padding: 5px 5px;
  text-decoration: none;
  display: block;
  text-align: left;
}

header .dropdown-content a:hover {
  background-color: #f1f1f1;
}

header .dropdown:hover .dropdown-content {
  display: block;
}

#main h1 {
  font-size: 200px;
  margin: 0px;
  padding: 0px;
}

.decorated-img {
  margin-right: 10px;
  border: 1px solid #dcab2d;
}

/* Media Queries */
@media (max-width: 768px) {
  #main h1 {
    font-size: 100px;
    margin: 0px;
    padding: 0px;
    line-height: 105px;
  }

  #main p {
    width: 50%;
  }
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

